# KmerInShort

./: .travis.yml  CMakeLists.txt  README.md
data/: example.fasta  refresu
src/: kmerinshort.cpp  kmerinshort.hpp  main.cpp
